--- a/style.css
+++ b/style.css
@@ -1,10 +1,15 @@
 .jumbotron {
   padding-top: 5rem;
-  background-color: #e2edff;
+  background-color: #ffcccc;
 }
 
-#project {
-  background-color: #e2edff;
+#project,
+#kontak {
+  background-color: #ffcccc;
+}
+#galeri,
+#tentang {
+  background-color: #eeeeee;
 }
 section {
   padding-top: 5rem;
@@ -12,13 +17,11 @@ section {
 
 .galeri-img {
   width: 100%;
+  border-radius: 1rem;
 }
 
 #galeri .row > * {
-  padding: 0;
-}
-#kontak {
-  background-color: #e2edff;
+  padding: 0.3rem;
 }
 .bg-red {
   background-color: #cc0001;
