--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -450,6 +450,9 @@
     text-align: center;
     font-size: 1.6rem;
   }
+  .about-text p {
+    font-size: 14px;
+  }
   .skills {
     padding: 50px 20px;
   }
@@ -477,10 +480,11 @@
     margin-right: 1rem;
   }
   .skill-level {
-    font-size: 16px;
+    font-weight: 400;
+    font-size: 14px;
   }
   .level {
-    font-size: 14px;
+    font-size: 12px;
   }
   .contact {
     display: flex;
