--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -119,6 +119,7 @@
   max-width: 600px;
 }
 .h-caption h4 {
+  color: var(--main-color);
   font-size: 2rem;
   color: var(--main-color);
 }
@@ -200,6 +201,7 @@
   margin: 15px 0;
 }
 .about-text h4 {
+  color: var(--main-color);
   font-size: 20px;
   font-weight: 600;
   text-transform: uppercase;
@@ -249,6 +251,7 @@
   margin: 15px 0;
 }
 .s-text h4 {
+  color: var(--main-color);
   font-size: 20px;
   font-weight: 600;
   text-transform: uppercase;
@@ -269,12 +272,7 @@
   max-height: 80px;
   padding: 5px;
   border-radius: 8px;
-  filter: grayscale(100%);
   box-shadow: 3px 3px 5px rgb(0, 0, 0, 0.5);
-  transition: transform 0.7s ease;
-}
-.skill-item:hover {
-  filter: grayscale(0%);
 }
 .skill-item img {
   width: 30%;
@@ -298,6 +296,7 @@
   padding: 75px;
 }
 .p-text h4 {
+  color: var(--main-color);
   font-size: 20px;
   font-weight: 600;
   text-transform: uppercase;
@@ -325,8 +324,37 @@
 .project-item img {
   width: 100%;
   height: 100%;
-  border-radius: 8px;
-  transition: transform 0.9s ease-in-out;
+}
+.project-text{
+  padding-top: 10px;
+  color: var(--text-color);
+}
+.project-logo {
+  padding: 20px;
+  gap: 20px;
+}
+.swiper-slide{
+  align-items: center !important;
+  display: flex !important;
+}
+.p-tools{
+  width: 170px;
+  height: 65px;
+  align-items: center !important;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  display: flex !important;
+}
+.p-tools img{
+  border: none;
+  margin-right: 10px;
+  width: 55px;
+}
+.p-tools span{
+  font-size: 17px;
+  font-weight: 600;
+  color: var(--text-color);
 }
 
 /* contact */
@@ -386,7 +414,7 @@
   color: var(--bg-color);
 }
 .contact-box h4 {
-  color: var(--bg-color);
+  color: var(--main-color);
   font-size: 20px;
   font-weight: 600;
   text-transform: uppercase;
@@ -495,6 +523,7 @@
     text-align: center;
   }
   .h-caption h4 {
+    color: var(--main-color);
     font-size: 1.5rem;
   }
   .h-caption h2 {
@@ -537,6 +566,7 @@
     font-size: 1.6rem;
   }
   .about-text h4 {
+    color: var(--main-color);
     font-size: 1.4rem;
     margin-bottom: 10px;
   }
@@ -565,6 +595,7 @@
     font-size: 1.6rem;
   }
   .s-text h4 {
+    color: var(--main-color);
     text-align: center;
     font-size: 1.4rem;
   }
@@ -593,6 +624,7 @@
     padding: 75px 20px;
   }
   .p-text h4 {
+    color: var(--main-color);
     font-size: 1.4rem;
   }
   .p-text h2 {
@@ -606,6 +638,21 @@
   }
   .project-item img {
     transition: transform 0.6s ease-in-out; /
+  }
+  .p-tools {
+    width: 100px; 
+    height: 40px; 
+    padding: 6px; 
+    border-radius: 5px;
+  }
+
+  .p-tools img {
+    width: 35px; 
+    margin-right: 6px; 
+  }
+
+  .p-tools span {
+    font-size: 10px; 
   }
 
   /* contact */
@@ -631,6 +678,7 @@
     text-align: center;
   }
   .contact-box h4 {
+    color: var(--main-color);
     font-size: 1.4rem;
     text-align: center;
   }
