--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,7 +13,7 @@
   --p-font: 1.1rem;
   --bg-color: #ffffff;
   --text-color: #000000;
-  --main-color: #00ff00;
+  --main-color: rgb(0, 255, 0);
   --other-color: #727272;
 }
 
@@ -127,9 +127,23 @@
   padding-bottom: 20px;
   font-size: var(--h2-font);
 }
-.home img {
+@keyframes flicker {
+  0% {
+    filter: brightness(100%);
+  }
+  50% {
+    filter: brightness(200%);
+  }
+  100% {
+    filter: brightness(100%);
+  }
+}
+
+.home img { 
   margin: 50px;
   max-width: 350px;
+  animation: flicker 2s infinite; /* Efek flicker dengan durasi 1 detik dan berulang terus-menerus */
+  transition: filter 2s ease; /* Menambahkan transisi halus untuk filter */
 }
 .arrow {
   position: absolute;
@@ -174,17 +188,18 @@
   justify-content: space-between;
   padding: 75px;
   gap: 5rem;
+  background: var(--text-color);
 }
 .about-img {
   flex-shrink: 0;
 }
 .about-img img {
+  box-shadow: 0 0 10px 5px rgba(0, 255, 0, 0.6), 0 0 20px rgba(0, 255, 0, 0.3);
   border-radius: 5%;
   max-width: 320px;
   width: 100%;
   height: auto;
   object-fit: contain;
-  box-shadow: 4px 4px 7px rgb(36, 0, 0, 0.7);
   filter: grayscale(100%);
   transition: filter 0.7s ease;
 }
@@ -199,6 +214,7 @@
   font-weight: 700;
   line-height: 1.2;
   margin: 15px 0;
+  color: var(--bg-color);
 }
 .about-text h4 {
   color: var(--main-color);
@@ -243,12 +259,14 @@
 .skills {
   padding: 75px;
   text-align: center;
+  background: var(--text-color);
 }
 .s-text h2 {
   font-size: var(--h2-font);
   font-weight: 700;
   line-height: 1.2;
   margin: 15px 0;
+  color: var(--bg-color);
 }
 .s-text h4 {
   color: var(--main-color);
@@ -272,7 +290,7 @@
   max-height: 80px;
   padding: 5px;
   border-radius: 8px;
-  box-shadow: 3px 3px 5px rgb(0, 0, 0, 0.5);
+  border: 1px solid #ccc;
 }
 .skill-item img {
   width: 30%;
@@ -294,6 +312,7 @@
 /* project */
 .project {
   padding: 75px;
+  background: var(--text-color);
 }
 .p-text h4 {
   color: var(--main-color);
@@ -307,19 +326,20 @@
   text-align: center;
   font-size: var(--h2-font);
   font-weight: bold;
-  color: var(--text-color);
+  color: var(--bg-color);
   margin-bottom: 30px;
 }
 .project-set {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  gap: 20px;
+  gap: 30px;
 }
 .project-item {
   overflow: hidden;
-  border-radius: 8px;
+  border: 1px solid #ccc;
+  border-radius: 10px;
   height: auto;
-  box-shadow: 3px 3px 5px rgb(0, 0, 0, 0.5);
+  background: var(--bg-color);
 }
 .project-item img {
   width: 100%;
@@ -632,9 +652,6 @@
   }
   .project-set {
     grid-template-columns: 1fr;
-  }
-  .project-item {
-    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
   }
   .project-item img {
     transition: transform 0.6s ease-in-out; /
